# Qingxin_shiyu

./: README.md  docker-compose.yaml
front/: .env  Dockerfile  next.config.js  package-lock.json  package.json  server.js
front/.next/: app-build-manifest.json  trace
front/.next/server/: _error.js  app-paths-manifest.json  client-reference-manifest.js  client-reference-manifest.json  flight-server-css-manifest.js  flight-server-css-manifest.json  next-font-manifest.js  next-font-manifest.json  webpack-runtime.js
front/app/: globals.css  layout.tsx  page.tsx  theme.ts
front/app/sign-in/: page.tsx  (+1 more)
serve/: pyproject.toml
serve/app/: chain.py  llm.py  server.py
serve/app/reranker/: reranker.md  reranker.py
serve/app/test/: chat_with_persistence.py
serve/db/: chroma_db.py  html_md.py  md_db.py
serve/db/chroma/c241952d-8d98-4de5-968c-b165ae599279/: index_metadata.pickle
serve/db/source_data/recipe_ingredient_info/: AiCao-useful#艾草.txt  AnChunDan-useful#鹌鹑蛋.txt  BaJiao-useful#八角--大料.txt  BaJiaoYe-useful#芭蕉叶.txt  BaLe-useful#芭乐.txt  BaiCai-useful#白菜叶--白菜.txt  BaiCu-useful#白醋.txt  BaiDou-useful#白豆.txt  BaiGuo-useful#白果.txt  BaiHe-useful#百合--鲜百合.txt  BaiHeGan-useful#百合干--干百合.txt  BaiHuJiao-useful#白胡椒.txt  BaiHuJiaoFen-useful#白胡椒粉.txt  BaiJiu-useful#高度白酒--酒--白酒.txt  BaiLiXiang-useful#百里香.txt  BaiLuoBo-useful#白萝卜.txt  BaiMian-useful#白面.txt  BaiQiaoKeLi-useful#白巧克力.txt  BaiShaTang-useful#白砂糖--砂糖.txt  BaiXia-useful#白虾.txt  BaiXiangGuo-useful#百香果.txt  BaiYeJie-useful#百叶结.txt  BaiYou-useful#白油.txt  BaiYuGu-useful#白玉菇.txt  BaiZhi-useful#白芷.txt  BaiZhiMa-useful#白芝麻--熟白芝麻.txt  BanLi-useful#板栗.txt  BaoXinCai-useful#包心菜.txt  BaoYu-useful#鲜鲍鱼--鲍鱼.txt  BaoYuZhi-useful#鲍鱼汁.txt  BeiBeiNanGua-useful#贝贝南瓜.txt  BeiDouFu-useful#北豆腐.txt  BeiJiXia-useful#北极虾.txt  BeiXingRen-useful#北杏.txt  BiMuYu-useful#比目鱼.txt  BiQi-useful#荸荠--马蹄.txt  BianYu-useful#鳊鱼.txt  BingTang-useful#冰糖.txt  BoCai-useful#菠菜汁--菠菜.txt  BoHe-useful#薄荷叶--薄荷.txt  (+1182 more)
server/: Dockerfile  README.md  pyproject.toml  run-server.sh
server/app/: chain.py  server.py
ui/: README.md
(+75 files in other folders)
